Updated some old lines to new url

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       <meta property="og:title" content="Steam Background Crop Tool" />
       <meta property="og:type" content="website" />
       <meta property="og:image" content="http://i.imgur.com/Q8kS6es.png" />
-      <meta property="og:url" content="http://sapic.github.io/" />
+      <meta property="og:url" content="https://steam.design/" />
       <meta property="og:description" content="This tool will help you to create an awesome Steam profile!" />
       <!-- for Twitter -->
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:title" content="Steam Background Crop Tool" />
       <meta name="twitter:description" content="This tool will help you to create an awesome Steam profile!" />
       <meta name="twitter:image" content="http://i.imgur.com/Q8kS6es.png" />
-      <meta name="twitter:url" content="http://sapic.github.io/" />
+      <meta name="twitter:url" content="https://steam.design/" />
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <!-- build:css main.css -->
       <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css" >
@@ -150,7 +150,7 @@
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
                               Share Us:
-                              <div class="social-likes" data-url="http://sapic.github.io/" data-title="I made a cool Steam profile with this! It's so cool!">
+                              <div class="social-likes" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
                                  <div class="facebook" title="Share link on Facebook"> Facebook</div>
                                  <div class="twitter" title="Share link on Twitter"> Twitter</div>
                                  <div class="plusone" title="Share link on Google+"> Google+</div>
@@ -294,7 +294,7 @@
                                           <div class="guide_showcase_item_description">
                                              A step by step guide into transferring your current Steam background into a showcase to show its full glory.
                                           </div>
-                                          <a class="bb_link" href="https://steamcommunity.com/linkfilter/?url=https://sapic.github.io/" target="_blank" rel="noreferrer">Cropping Tool</a>
+                                          <a class="bb_link" href="https://steamcommunity.com/linkfilter/?url=https://steam.design/" target="_blank" rel="noreferrer">Cropping Tool</a>
                                        </div>
                                     </div>
                                  </div>
