--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
       <!-- for Facebook -->
       <meta property="og:title" content="Steam Background Crop Tool" />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="http://i.imgur.com/Q8kS6es.png" />
+      <meta property="og:image" content="https://i.imgur.com/Q8kS6es.png" />
       <meta property="og:url" content="https://steam.design/" />
       <meta property="og:description" content="This tool will help you to create an awesome Steam profile!" />
       <!-- for Twitter -->
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:title" content="Steam Background Crop Tool" />
       <meta name="twitter:description" content="This tool will help you to create an awesome Steam profile!" />
-      <meta name="twitter:image" content="http://i.imgur.com/Q8kS6es.png" />
+      <meta name="twitter:image" content="https://i.imgur.com/Q8kS6es.png" />
       <meta name="twitter:url" content="https://steam.design/" />
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <!-- build:css main.css -->
@@ -271,7 +271,7 @@
                                  <div class="showcase_content_bg">
                                     <div class="workshop_showcase_item showcase_slot ">
                                        <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">
-                                       <img class="workshop_showcase_item_image" src="http://i.imgur.com/Q8kS6es.png">
+                                       <img class="workshop_showcase_item_image" src="https://i.imgur.com/Q8kS6es.png">
                                        </a>
                                        <div class="workshop_showcase_item_details">
                                           <div class="showcase_item_detail_title"><a class="whiteLink" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">Create Steam Background showcases</a></div>
