--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,7 @@
 <div id="disqus_thread" style="max-height: 600px"></div>
 <script type="text/javascript">
     var disqus_shortname = 'sapic';
-    var disqus_url = 'http://sapic.github.io/';
+    var disqus_url = 'https://sapic.github.io/';
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
