Fixed ShareUs tab

--- a/index.html
+++ b/index.html
@@ -149,18 +149,18 @@
                            </div>
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
-                              Share Us:
+                              <span>Share Us:&nbsp;</span>
                               <div class="social-likes" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
-                                 <div class="facebook" title="Share link on Facebook"> Facebook</div>
-                                 <div class="twitter" title="Share link on Twitter"> Twitter</div>
-                                 <div class="plusone" title="Share link on Google+"> Google+</div>
-                                 <div class="vkontakte" title="Share link on VK"> VK</div>
+                                 <div class="facebook" title="Share link on Facebook">&nbsp;Facebook</div>
+                                 <div class="twitter" title="Share link on Twitter">&nbsp;Twitter</div>
+                                 <div class="plusone" title="Share link on Google+">&nbsp;Google+</div>
+                                 <div class="vkontakte" title="Share link on VK">&nbsp;VK</div>
                               </div>
                            </div>
                            <div class="profile_summary_footer">
                               <div class="btn_profile_action btn_medium" id="getBg"><span>Buy This BG</span></div>
                               <a class="btn_profile_action btn_medium saveButton" id="saveAll"><span>Download ZIP</span></a>
-                              <a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button"><span>SCM Preview</span></a>
+                              <a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button"><span>Preview Script</span></a>
                            </div>
                         </div>
                      </div>
@@ -279,13 +279,14 @@
                                              Created by - 
                                              <a href="http://steamcommunity.com/id/TrueCarry" class="whiteLink" data-miniprofile="55701071">TrueCarry</a>, 
                                              <a href="http://steamcommunity.com/id/BoltActionBeats" class="whiteLink" data-miniprofile="65430799">Dr.Bolt</a>, 
-                                             <a href="http://steamcommunity.com/id/wolfenstian" class="whiteLink" data-miniprofile="68667764">SloWolfe</a> and 
-                                             <a href="http://steamcommunity.com/id/profile_url" class="whiteLink" data-miniprofile="139708282">Curse Broken</a>								
+                                             <a href="http://steamcommunity.com/id/wolfenstian" class="whiteLink" data-miniprofile="68667764">SloWolfe</a>, 
+                                             <a href="http://steamcommunity.com/id/cursebroken" class="whiteLink" data-miniprofile="139708282">Curse Broken</a> and 
+                                             <a href="http://steamcommunity.com/id/theoddball" class="whiteLink" data-miniprofile="88233003">The Oddball</a>								
                                           </div>
                                           <div class="guide_showcase_appinfo">
                                              <div class="workshop_showcase_stars">
                                                 <img src="http://steamcommunity-a.akamaihd.net/public/images/sharedfiles/5-star.png?v=2">
-                                                7,225 ratings																	
+                                                7,314 ratings																	
                                              </div>
                                              <div class="workshop_showcase_app">
                                                 <a href="http://steamcommunity.com/workshop/browse/?appid=440"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/440/e3f595a92552da3d664ad00277fad2107345f743.jpg"></a> <a class="whiteLink" href="http://steamcommunity.com/workshop/browse/?appid=440">Team Fortress 2</a>
