Added a "Hide Backslist" button
title

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                   Don't know what are You doing here? Click!</a></span>-->
                <span><a class="top_hint" href="https://www.youtube.com/watch?v=6Bj6oxaN5DY">
                Video Guide!</a></span>
-               <span style="float:right">
-                  <div id="steamAuth"></div>
-               </span>
+                <div id="steamAuth" style="float:right"></div>
+                <div id="hideBacksList" onclick="hideBacksList();" style="float:right">
+                <img id="backsListImage" src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/arrowDn9x5.gif" style="margin-right: 10px;">
+                </div>
             </div>
             <div class="backsList" id="backsList"></div>
          </div>
