More UI updates yay :3

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                   Don't know what are You doing here? Click!</a></span>-->
                <span><a class="top_hint" href="https://www.youtube.com/watch?v=6Bj6oxaN5DY">
                Video Guide!</a></span>
-                <div id="steamAuth" style="float:right"></div>
-                <div id="hideBacksList" onclick="hideBacksList();" style="float:right">
-                <img id="backsListImage" src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/arrowDn9x5.gif" style="margin-right: 10px;">
-                </div>
+               <div id="steamAuth" style="float:right"></div>
+               <div id="hideBacksList" onclick="hideBacksList();" style="float:right">
+                  <img id="backsListImage" src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/arrowDn9x5.gif" style="margin-right: 10px;">
+               </div>
             </div>
             <div class="backsList" id="backsList"></div>
          </div>
@@ -93,7 +93,7 @@
                               Canada					
                            </div>
                            <div class="gray_bevel for_text_input">
-                              <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste custom image URL here...">
+                              <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste a custom image URL here...">
                            </div>
                            <div class="btn_profile_action btn_medium" id="goUrl">
                               <span>Change BG</span>
@@ -108,10 +108,10 @@
                            <div class="profile_header_badgeinfo_badge_area">
                               <a href="https://steamcommunity.com/id/wolfenstian/badges">
                                  <div class="persona_name persona_level">
-                                     <span>Level&nbsp;</span>
-                                     <div class="friendPlayerLevel lvl_60">
-                                         <span class="friendPlayerLevelNum">61</span>
-                                     </div>
+                                    <span>Level&nbsp;</span>
+                                    <div class="friendPlayerLevel lvl_60">
+                                       <span class="friendPlayerLevelNum">62</span>
+                                    </div>
                                  </div>
                               </a>
                               <div class="profile_header_badge">
@@ -202,12 +202,12 @@
                                     </div>
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', true );">
-                                           <div id="r12"></div>
+                                          <div id="r12"></div>
                                        </div>
                                     </div>
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', true );">
-                                           <div id="r13"></div>
+                                          <div id="r13"></div>
                                        </div>
                                     </div>
                                     <a class="screenshot_showcase_smallscreenshot screenshot_count" href="http://steamcommunity.com/id/wolfenstian/images/">
@@ -240,17 +240,17 @@
                                  <div class="screenshot_showcase_rightcol">
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605809&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605809', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605809', true );">
-                                           <div id="r21"></div>
+                                          <div id="r21"></div>
                                        </div>
                                     </div>
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605824&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605824', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605824', true );">
-                                           <div id="r22"></div>
+                                          <div id="r22"></div>
                                        </div>
                                     </div>
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605839&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605839', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605839', true );">
-                                           <div id="r23"></div>
+                                          <div id="r23"></div>
                                        </div>
                                     </div>
                                     <a class="screenshot_showcase_smallscreenshot screenshot_count" href="http://steamcommunity.com/id/wolfenstian/screenshots/">
@@ -287,7 +287,7 @@
                                           <div class="guide_showcase_appinfo">
                                              <div class="workshop_showcase_stars">
                                                 <img src="http://steamcommunity-a.akamaihd.net/public/images/sharedfiles/5-star.png?v=2">
-                                                7,314 ratings																	
+                                                7,421 ratings																	
                                              </div>
                                              <div class="workshop_showcase_app">
                                                 <a href="http://steamcommunity.com/workshop/browse/?appid=440"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/440/e3f595a92552da3d664ad00277fad2107345f743.jpg"></a> <a class="whiteLink" href="http://steamcommunity.com/workshop/browse/?appid=440">Team Fortress 2</a>
@@ -491,27 +491,27 @@
                               </a>
                            </div>
                            <div class="profile_count_link_preview">
+                              <div class="profile_badges_badge " data-community-tooltip="The Untrained Eye<br>
+                                 Level 3 The Decimation of Olarath Badge">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/491250">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/491250/6f6134e5884d571dbaa1db095ebc3f60cfedd266.png">
+                                 </a>
+                              </div>
+                              <div class="profile_badges_badge " data-community-tooltip="This is Ðoge.<br>
+                                 Level 1 Montaro Badge">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/495890">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/495890/9a6581210cc7a909727036b36ee0a34983bb62ee.png">
+                                 </a>
+                              </div>
                               <div class="profile_badges_badge " data-community-tooltip="General<br>
                                  Level 5 The Chosen RPG Badge">
                                  <a href="http://steamcommunity.com/id/wolfenstian/gamecards/434420">
                                  <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/434420/dfcf0e4a4c1ea3e66d66ad22feb87bfb15538c76.png">
                                  </a>
                               </div>
-                              <div class="profile_badges_badge " data-community-tooltip="Community Leader">
+                              <div class="profile_badges_badge last" data-community-tooltip="Community Leader">
                                  <a href="http://steamcommunity.com/id/wolfenstian/badges/2">
                                  <img src="http://steamcommunity-a.akamaihd.net/public/images/badges/01_community/communityleader_54.png">
-                                 </a>
-                              </div>
-                              <div class="profile_badges_badge " data-community-tooltip="North Pole Noir Lvl 5<br>
-                                 Level 5 Holiday Sale 2015 Badge">
-                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/425280">
-                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/425280/4738ad301f5fe5a45ecad2bd0916d670bcc0ff7d.png">
-                                 </a>
-                              </div>
-                              <div class="profile_badges_badge last" data-community-tooltip="Colored Cube<br>
-                                 Level 3 Gravilon Badge">
-                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/355150">
-                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/355150/303b6f1445aef3f477d931ccff376f4a61da01e0.png">
                                  </a>
                               </div>
                               <div style="clear: left;"></div>
@@ -528,10 +528,10 @@
                         </div>
                         <div class="profile_count_link ellipsis">
                            <a href="http://steamcommunity.com/id/wolfenstian/inventory/">
-                              <span class="count_link_label">Inventory</span>&nbsp;
-                              <span class="profile_count_link_total">
-                                 &nbsp;
-                              </span>
+                           <span class="count_link_label">Inventory</span>&nbsp;
+                           <span class="profile_count_link_total">
+                           &nbsp;
+                           </span>
                            </a>
                         </div>
                         <div class="profile_count_link ellipsis">
@@ -611,7 +611,7 @@
                            <a href="http://steamcommunity.com/id/wolfenstian/friends/">
                            <span class="count_link_label">Friends</span>&nbsp;
                            <span class="profile_count_link_total">
-                           501															</span>
+                           494															</span>
                            </a>
                         </div>
                         <div class="profile_topfriends profile_count_link_preview">
