Revert "More small updates"
This reverts commit 7b85c06aa7dce0fbc54e743bcd2fb0bf4bcf3ad5.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="./css/slider.css">
       <link rel="stylesheet" href="./css/social-likes_flat.css">
+      <link rel="stylesheet" href="./css/minimap.css">
       <link rel="stylesheet" href="./css/index.css">
       <!-- endbuild -->
       <!-- build:js main.js -->
@@ -39,6 +40,7 @@
       <script src="./js/social-likes.min.js"></script>
       <script src="./js/jquery.smooth-scroll.min.js"></script>
       <script src="./js/interact-1.2.2.min.js"></script>
+      <script src="./js/minimap.js"></script>
       <script src="./js/FileSaver.js"></script>
       <script src="./js/jszip.js"></script>
       <script src="./js/index.js"></script>
@@ -52,6 +54,8 @@
          <div class="content" id="cardsList">
             <div style="margin-top: 5px;">
                <span>Filter: <input type="text" id="filterIn"></span>
+               <!--<span><a class="top_hint" target="_blank" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">
+                  Don't know what are You doing here? Click!</a></span>-->
                <span><a class="top_hint" href="https://www.youtube.com/watch?v=6Bj6oxaN5DY">
                Video Guide!</a></span>
                <div id="steamAuth" style="float:right"></div>
@@ -271,7 +275,7 @@
                                        <img class="workshop_showcase_item_image" src="https://i.imgur.com/Q8kS6es.png">
                                        </a>
                                        <div class="workshop_showcase_item_details">
-                                          <div class="showcase_item_detail_title"><a class="whiteLink" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">Create Steam Background Showcases</a></div>
+                                          <div class="showcase_item_detail_title"><a class="whiteLink" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">Create Steam Background showcases</a></div>
                                           <div class="guide_showcase_contributors">
                                              Created by - 
                                              <a href="http://steamcommunity.com/id/TrueCarry" class="whiteLink" data-miniprofile="55701071">TrueCarry</a>, 
