more front ui updates

--- a/index.html
+++ b/index.html
@@ -611,33 +611,33 @@
                            </a>
                         </div>
                         <div class="profile_topfriends profile_count_link_preview">
-                           <div class="friendBlock persona offline" data-miniprofile="202912056">
+                           <div class="friendBlock persona online" data-miniprofile="202912056">
                               <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/PlasticMemory"></a>
-                              <div class="friendPlayerLevel lvl_400 lvl_plus_50">
-                                 <span class="friendPlayerLevelNum">450</span>
+                              <div class="friendPlayerLevel lvl_500 lvl_plus_10">
+                                 <span class="friendPlayerLevelNum">510</span>
                               </div>
-                              <div class="playerAvatar offline">
-                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/b3/b38cae4b00bf37efae2380b385cab292833a2800_medium.jpg">
+                              <div class="playerAvatar online">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/93/9300c800e74a17f471cbc8712a272ce1f09e2818_medium.jpg">
                               </div>
                               <div class="friendBlockContent">
                                  CheLsea`<br>
                                  <span class="friendSmallText">
-                                 Last Online 3 hrs, 19 mins ago
+                                 Online
                                  </span>
                               </div>
                            </div>
-                           <div class="friendBlock persona online" data-miniprofile="173255297">
+                           <div class="friendBlock persona offline" data-miniprofile="173255297">
                               <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/kwikisback"></a>
                               <div class="friendPlayerLevel lvl_200 lvl_plus_10">
                                  <span class="friendPlayerLevelNum">210</span>
                               </div>
-                              <div class="playerAvatar online">
-                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/82/82c00443ec2d3f1f8e43ba3c30db99195c41e367_medium.jpg">
+                              <div class="playerAvatar offline">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/28/28e1e6893527e18bc75e01ce19ccdd540f891009_medium.jpg">
                               </div>
                               <div class="friendBlockContent">
                                  AndreiK<br>
                                  <span class="friendSmallText">
-                                 Online
+                                 Last Online 1 hrs, 43 mins ago
                                  </span>
                               </div>
                            </div>
@@ -652,7 +652,7 @@
                               <div class="friendBlockContent">
                                  献给十七岁<br>
                                  <span class="friendSmallText">
-                                 Last Online 4 hrs, 26 mins ago
+                                 Last Online 1 hrs, 29 mins ago
                                  </span>
                               </div>
                            </div>
@@ -662,10 +662,10 @@
                                  <span class="friendPlayerLevelNum">196</span>
                               </div>
                               <div class="playerAvatar online">
-                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/36/36367b2ebeb8988975f0047c16a20a240d95d50a_medium.jpg">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/8d/8d9804483b7be455905647515e0603b1e9800af0_medium.jpg">
                               </div>
                               <div class="friendBlockContent">
-                                 🐱Ｂℴｂ☆ʙᴏʙ🐱<br>
+                                 🌙Ｂℴｂ☆ʙᴏʙ🌙<br>
                                  <span class="friendSmallText">
                                  Online
                                  </span>
@@ -674,15 +674,15 @@
                            <div class="friendBlock persona offline" data-miniprofile="129966918">
                               <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/scanetwork"></a>
                               <div class="friendPlayerLevel lvl_100 lvl_plus_80">
-                                 <span class="friendPlayerLevelNum">180</span>
+                                 <span class="friendPlayerLevelNum">185</span>
                               </div>
                               <div class="playerAvatar offline">
-                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/99/995aa170af7234f58337d7b7a8fc4282eef29a4e_medium.jpg">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/78/788899af639740b21da906d5578ce407a3459006_medium.jpg">
                               </div>
                               <div class="friendBlockContent">
-                                 🎮ᴡᴜsɪᴡᴜɢ™🔧<br>
+                                 🎮wυsιwυɢ™ 🔧<br>
                                  <span class="friendSmallText">
-                                 Last Online 19 hrs, 10 mins ago
+                                 Last Online 2 days ago
                                  </span>
                               </div>
                            </div>
@@ -697,27 +697,28 @@
                               <div class="friendBlockContent">
                                  Truong<br>
                                  <span class="friendSmallText">
-                                 Last Online 7 hrs, 47 mins ago
+                                 Last Online 9 hrs, 21 mins ago
                                  </span>
                               </div>
                            </div>
                         </div>
                      </div>
-                     <div class="underfr" width="268"></div>
                   </div>
-                  <div style="clear: both;"></div>
+                  <div class="underfr" width="268"></div>
                </div>
+               <div style="clear: both;"></div>
             </div>
          </div>
+      </div>
       </div>
       <div id="footer_spacer"></div>
       <div id="footer">
          <div class="footer_content">
             <span id="footerLogo"><img src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/footerLogo_valve.png" width="96" height="26" border="0" alt="Логотип Valve"></span>
             <span id="footerText">
-               Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.<br>
-               Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
-               Version #{{#vernum}}
+            Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.<br>
+            Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
+            Version #{{#vernum}}
             </span>
          </div>
       </div>
