Added localstorage to backslist hiding
Might revert this if it doesn't work, I can't test on local copy.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                Video Guide!</a></span>
                <div id="steamAuth" style="float:right"></div>
                <div id="hideBacksList" onclick="hideBacksList();" style="float:right">
-                  <img id="backsListImage" src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/arrowDn9x5.gif" style="margin-right: 10px;">
+                  <img id="backsListImage" src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/arrowDn9x5.gif" style="margin-right: 10px; display: none;">
                </div>
             </div>
             <div class="backsList" id="backsList"></div>
