Added right image preview.
In Progress.
Will add saving later.

--- a/index.html
+++ b/index.html
@@ -190,18 +190,18 @@
                                        <img class="screenshot_showcase_staticon" src="http://steamcommunity-a.akamaihd.net/public/images/skin_1/icon_btn_comment.png"> 1							</span>
                                     </div>
                                  </div>
-                                 <div class="screenshot_showcase_rightcol">
+                                 <div id="r11r" class="screenshot_showcase_rightcol">
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450', true );">
                                           <div id="r11"></div>
                                        </div>
                                     </div>
-                                    <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
+                                    <div id="r12r" style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', true );">
                                           <div id="r12"></div>
                                        </div>
                                     </div>
-                                    <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
+                                    <div id="r13r" style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', true );">
                                           <div id="r13"></div>
                                        </div>
@@ -216,7 +216,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="profile_customization">
+                        <div id="sssc" class="profile_customization">
                            <div class="profile_customization_header">Screenshot Showcase
                            </div>
                            <div class="profile_customization_block">
