Big image full support!
It's here!
It's been requested, so here it is.
Click the "Toggle Long Images" button to get a long main image, and long
right image.

They auto crop to the length of the background! No more black space at
the bottom.

Also changed the names of saved images to be more user friendly.

Removed some residual code.

--- a/index.html
+++ b/index.html
@@ -125,18 +125,17 @@
                                  </div>
                                  <div class="resizeType" style="display: none">
                                     <div class="favorite_badge">
-                                       First: <input type="range" id="slFSize" class="imgSizeSlider" min="287" max="509" value="509"><br>
-                                       Second: <input type="range" id="slSSize" class="imgSizeSlider" min="287" max="509" value="287">
+                                       <a>Disabled because Long Images are enabled.</a>
                                     </div>
                                  </div>
                               </div>
                            </div>
                            <div class="profile_header_actions">
-                              <div class="btn_profile_action btn_medium" id="toggleResize">
-                                 <span>Free Resize</span>
+                              <div class="btn_profile_action btn_medium" id="toggleLong">
+                                 <span>Toggle Long Images</span>
                               </div>
                               <div class="btn_profile_action btn_medium" id="randomBG">
-                                 <span>Random Background</span>
+                                 <span>Random BG</span>
                               </div>
                            </div>
                         </div>
