--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                               </div>
                            </div>
                            <div class="profile_header_actions">
-                              <div class="btn_profile_action btn_medium" id="toggleLong">
+                              <div class="btn_profile_action btn_medium" id="toggleLong" onclick="toggleLong()">
                                  <span>Toggle Long Images</span>
                               </div>
                               <div class="btn_profile_action btn_medium" id="randomBG">
