--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
                               <img class="profile_flag" src="https://steamcommunity-a.akamaihd.net/public/images/countryflags/ca.gif">
                               Canada					
                            </div>
+                           <div class="bg_link">
                            <div class="gray_bevel for_text_input">
                               <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste a custom image URL here...">
                            </div>
                            <div class="btn_profile_action btn_medium" id="goUrl">
                               <span>Change BG</span>
+                           </div>
                            </div>
                         </div>
                         <div class="playerAvatar playerAvatarAutoSize profile_header_size offline">
@@ -103,7 +105,6 @@
                         </div>
                         <div class="profile_header_badgeinfo">
                            <div class="profile_header_badgeinfo_badge_area">
-                              <a href="https://steamcommunity.com/id/wolfenstian/badges">
                                  <div class="persona_name persona_level">
                                     <span>Level&nbsp;</span>
                                     <div class="friendPlayerLevel lvl_60">
@@ -146,8 +147,8 @@
                            </div>
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
-                              <span>Share Us:&nbsp;</span>
-                              <div class="social-likes" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
+                              <span class="social-sapic">Share Us:&nbsp;</span>
+                              <div class="social-likes social-sapic" data-counters="no" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
                                  <div class="facebook" title="Share link on Facebook">&nbsp;Facebook</div>
                                  <div class="twitter" title="Share link on Twitter">&nbsp;Twitter</div>
                                  <div class="plusone" title="Share link on Google+">&nbsp;Google+</div>
