counters have returned

--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
                            </div>
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
-                              <span class="social-sapic">Share Us:&nbsp;</span>
-                              <div class="social-likes social-sapic" data-counters="no" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
+                              <div class="social-likes social-sapic" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
                                  <div class="facebook" title="Share link on Facebook">&nbsp;Facebook</div>
                                  <div class="twitter" title="Share link on Twitter">&nbsp;Twitter</div>
                                  <div class="plusone" title="Share link on Google+">&nbsp;Google+</div>
