--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             <span id="footerText">
             Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.<br>
             Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
-            Version #{{#vernum}}
+               <span id="version">Version #{{#vernum}}</span>
             </span>
          </div>
       </div>
